syntax = "proto3";
package proto;

message DataObject {
    bytes uuid = 1;
    uint64 address = 2;
    uint64 size = 3;
}
